--- a/templates/base.html
+++ b/templates/base.html
@@ -53,18 +53,12 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="{% url 'payments:dashboard' %}">🛕 Temple Admin</a>
+			<a class="navbar-brand" href="/">🛕 Temple Admin</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'payments:dashboard' %}">Dashboard</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'payments:payment_list' %}">Payments</a>
-					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'payments:payment_form' %}">New Payment</a>
 					</li>
@@ -73,15 +67,13 @@
 		</div>
 	</nav>
 
+
 	<div class="container mt-4">
 		{% block content %}
 		{% endblock %}
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	{% if payment.receipt and payment.invoice_pdf %}
-    <a href="{{ payment.invoice_pdf.url }}" class="btn btn-sm btn-primary" target="_blank">Download Invoice</a>
-{% endif %}
-
 </body>
+
 </html>
